100-happyHouse/02_happyhouse-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: happyhouse-web
  name: happyhouse-web
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: happyhouse-web
